v1 添加user jwt中间件
